--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+  <!-- SEO Meta Tags -->
+<meta name="title" content="Free Age Calculator - Exact Age in Years, Months, Days">
+<meta name="description" content="Simple and free Age Calculator. ✔ Enter your Date of Birth ✔ Get your exact age in Years, Months, Days ✔ Total days, hours, minutes lived ✔ Next Birthday countdown ✔ Zodiac sign. Works offline!">
+<meta name="keywords" content="age calculator, free age calculator, online age calculator, birthday countdown, zodiac calculator, calculate age, exact age in days, age in years months days">
+<meta name="robots" content="index, follow">
+<meta name="author" content="Gopy Kumar">
+
+<!-- Open Graph (For Social Media Preview) -->
+<meta property="og:title" content="Free Age Calculator - Exact Age in Years, Months, Days">
+<meta property="og:description" content="Find your exact age with our free Age Calculator. Works offline, gives zodiac sign, next birthday countdown, and more.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://gopykumar12.github.io/age-calculator/">
+<meta property="og:image" content="https://gopykumar12.github.io/age-calculator/preview.png">
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="https://gopykumar12.github.io/age-calculator/favicon.png">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Age Calculator • Gopy</title>
